# repos3

1744486979-glyph-automat/: .gitignore  .pydoctor.cfg  SECURITY.md  mypy.ini  pyproject.toml  tox.ini  typical_example_happy.py
1744486979-glyph-automat/.github/workflows/: ci.yml
1744486979-glyph-automat/docs/: compare.rst  conf.py  index.rst  requirements.in  requirements.txt  tutorial.rst  visualize.rst
1744486979-glyph-automat/docs/api/: index.rst
1744486979-glyph-automat/docs/examples/: automat_card.py  coffee_expanded.py  dont_get_state.py  feedback_debugging.py  feedback_errors.py  feedback_order.py  garage_door.py  garage_door_security.py  serialize_machine.py  turnstile_example.py  turnstile_typified.py
1744832908-NVIDIA-NeMo-Guardrails/: .gitignore  .gitlab-ci.yml  CHANGELOG-Colang.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  build_notebook_docs.py  pyproject.toml  pytest.ini  tox.ini
1744832908-NVIDIA-NeMo-Guardrails/.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
1744832908-NVIDIA-NeMo-Guardrails/.github/scripts/: build.sh
1744832908-NVIDIA-NeMo-Guardrails/.github/workflows/: _test.yml  docs-build.yaml  docs-preview-pr.yaml  docs-remove-stale-reviews.yaml  full-tests.yml  latest-deps-tests.yml  pr-tests.yml  test-and-build-wheel.yml  test-docker.yml  test-published-dist.yml
1744832908-NVIDIA-NeMo-Guardrails/docs/: README.md  conf.py  faqs.md  getting-started.md  index.md  project.json  research.md  versions1.json
1744832908-NVIDIA-NeMo-Guardrails/docs/colang-2/: VERSION.txt  index.rst  overview.rst
1744832908-NVIDIA-NeMo-Guardrails/docs/colang-2/examples/: test_csl.py  utils.py
1744832908-NVIDIA-NeMo-Guardrails/docs/colang-2/language-reference/: the-standard-library.rst
1744832908-NVIDIA-NeMo-Guardrails/docs/evaluation/: README.md  llm-vulnerability-scanning.md
1744832908-NVIDIA-NeMo-Guardrails/docs/getting-started/: README.md  index.rst  installation-guide.md
1744832908-NVIDIA-NeMo-Guardrails/docs/getting-started/1-hello-world/: README.md  hello-world.ipynb
1744832908-NVIDIA-NeMo-Guardrails/docs/getting-started/2-core-colang-concepts/: README.md  core-colang-concepts.ipynb
1744832908-NVIDIA-NeMo-Guardrails/docs/getting-started/3-demo-use-case/: README.md  demo-use-case.ipynb
1744832908-NVIDIA-NeMo-Guardrails/docs/getting-started/4-input-rails/: README.md  input-rails.ipynb
1744832908-NVIDIA-NeMo-Guardrails/docs/getting-started/5-output-rails/: README.md  output-rails.ipynb
1744832908-NVIDIA-NeMo-Guardrails/docs/getting-started/6-topical-rails/: README.md  topical-rails.ipynb
1744832908-NVIDIA-NeMo-Guardrails/docs/getting-started/7-rag/: README.md  rag.ipynb
1744832908-NVIDIA-NeMo-Guardrails/docs/security/: guidelines.md  red-teaming.md
1744832908-NVIDIA-NeMo-Guardrails/docs/user-guides/: cli.md  colang-language-syntax-guide.md  configuration-guide.md  guardrails-library.md  guardrails-process.md  index.rst  llm-support.md  migration-guide.md  multimodal.md  server-guide.md
1744832908-NVIDIA-NeMo-Guardrails/docs/user-guides/advanced/: align-score-deployment.md  embedding-search-providers.md  generation-options.md  index.rst  jailbreak-detection-deployment.md  llama-guard-deployment.md  nemoguard-contentsafety-deployment.md  nemoguard-jailbreakdetect-deployment.md  nemoguard-topiccontrol-deployment.md  safeguarding-ai-virtual-assistant-blueprint.md
1744832908-NVIDIA-NeMo-Guardrails/docs/user-guides/community/: active-fence.md  auto-align.md  cleanlab.md  fiddler.md  presidio.md  privateai.md  prompt-security.md
1744832908-NVIDIA-NeMo-Guardrails/docs/user-guides/detailed-logging/: README.md
1744832908-NVIDIA-NeMo-Guardrails/examples/: sample_config.yml
1744832908-NVIDIA-NeMo-Guardrails/examples/bots/abc/: README.md
1744832908-NVIDIA-NeMo-Guardrails/examples/notebooks/: generate_events_and_streaming.ipynb  privateai_pii_detection.ipynb  safeguard_ai_virtual_assistant_notebook.ipynb
1744832908-NVIDIA-NeMo-Guardrails/nemoguardrails/: __init__.py  streaming.py  utils.py
1744832908-NVIDIA-NeMo-Guardrails/nemoguardrails/actions/: action_dispatcher.py  actions.py  output_mapping.py
1744832908-NVIDIA-NeMo-Guardrails/nemoguardrails/cli/: chat.py  migration.py
1744832908-NVIDIA-NeMo-Guardrails/nemoguardrails/embeddings/: basic.py  cache.py
1744832908-NVIDIA-NeMo-Guardrails/nemoguardrails/kb/: kb.py
1744832908-NVIDIA-NeMo-Guardrails/nemoguardrails/llm/: filters.py  output_parsers.py  prompts.py  taskmanager.py  types.py
1744832908-NVIDIA-NeMo-Guardrails/nemoguardrails/logging/: callbacks.py
1744832908-NVIDIA-NeMo-Guardrails/nemoguardrails/server/: api.py
1744832908-NVIDIA-NeMo-Guardrails/qa/: Dockerfile.qa
1744832908-NVIDIA-NeMo-Guardrails/tests/: conftest.py  test_action_dispatcher.py  test_actions.py  test_actions_output_mapping.py  test_activefence_rail.py  test_autoalign.py  test_autoalign_factcheck.py  test_buffer_strategy.py  test_bug_5.py  test_cache_embeddings.py  test_cli_migration.py  test_embedding_providers.py  test_embeddings_fastembed.py  test_embeddings_only_user_messages.py  test_fact_checking.py  test_fiddler_rails.py  test_filters.py  test_jailbreak_models.py  test_jailbreak_nim.py  test_llm_task_manager_multimodal.py  test_llmrails.py  test_llmrails_reasoning.py  test_privateai.py  test_prompt_modes.py  test_prompt_security.py  test_railsignore.py  test_reasoning_traces.py  test_registry.py  test_sensitive_data_detection.py  test_streaming.py  test_streaming_output_rails.py  test_tracing.py  test_utils.py  utils.py
1744832908-NVIDIA-NeMo-Guardrails/tests/v2_x/: chat.py  test_attention_library.py  test_flow_mechanics.py
1744832908-NVIDIA-NeMo-Guardrails/vscode_extension/: README.md
1744837485-sb-ai-lab-EmotiEffLib/emotieffcpplib/: .clang-format  .gitignore  CMakeLists.txt  README.md
1744837485-sb-ai-lab-EmotiEffLib/emotieffcpplib/src/: facial_analysis.cpp
1744837485-sb-ai-lab-EmotiEffLib/emotieffcpplib/tests/: CMakeLists.txt  generate_exp_preproc_results.py  test_utils.cpp  tests_facial_analisys.cpp  tests_internal_methods.cpp
(+1121 files in other folders)
