[build-system]
requires = [
  "setuptools >= 35.0.2",
  "wheel >= 0.29.0",
  "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name="Automat"
dynamic = ["version"]
authors=[
  { name = "Glyph", email = "code@glyph.im" },
]
description="Self-service finite-state machines for the programmer on the go."
readme="README.md"
requires-python=">= 3.8"
dependencies=[
  'typing_extensions; python_version<"3.10"',
]
license={file="LICENSE"}
keywords=[
  "fsm",
  "state machine",
  "automata",
]
classifiers=[
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.urls]
Documentation = "https://automat.readthedocs.io/"
Source = "https://github.com/glyph/automat/"

[project.optional-dependencies]
visualize=[
  "graphviz>0.5.1",
  "Twisted>=16.1.1",
]

[project.scripts]
automat-visualize = "automat._visualize:tool"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# No configuration required, but the section needs to exist?
